# XGenYoloExample

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: yolox_4.txt  yolox_80.pb  yolox_80_416x640.pb  yolox_80_640x416.pb  yolox_80_640x640.pb
app/src/main/cpp/: inference_api.cc  inference_api.h
app/src/main/cpp/include/: xgen.h
app/src/main/java/com/cocopie/xgen/yolo/example/: CoCoPIEJNIExporter.kt  CoCoPIEUtils.kt  MainActivity.kt  Result.kt  ResultView.kt  YoloX.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
